# vortex-client

./: ERRORS.md  ISSUES.md  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: base.json
src-tauri/src/: main.rs
src-tauri/src/api/: api_error.rs  game.rs  mod.rs  user_auth.rs  user_logic.rs
src-tauri/src/constants/: api_constants.rs  mod.rs
src-tauri/src/events/: mod.rs  mqtt_event_model.rs  mqtt_events.rs  mqtt_user_events.rs
src-tauri/src/models/: mod.rs
src-tauri/src/state/: mod.rs
src-tauri/src/utils/: mod.rs  qr.rs
src/chess/: index.tsx
src/chess/components/: Chessboard.tsx
src/chess/componets/: BoardComponent.tsx  CastlingComponent.tsx  CellComponent.tsx  PawnTransform.tsx  types.ts
src/context/: WalletConnectionProvider.tsx
src/data/: friend_requests_data.json  lobby_users.json  ongoing_games_data.json  online_users.json
src/helper_functions/: apiCall.ts  convertChessCell.ts  convertGameEvents.ts  drawUtil.ts  getChessOpponentColor.ts  useDraw.ts  useEntryAnimate.tsx
src/persistent_storage/: save_user_details.ts
src/poker/: index.tsx
src/screens/: AuthScreen.tsx  CreateLobby.tsx  FindMatchScreen.tsx  InvalidLobbyScreen.tsx  Loading.tsx  LobbyScreen.tsx  MatchScreen.tsx  OngoingGamesScreen.tsx  ProfileScreen.tsx  SpectatorScreen.tsx  UserHomeScreen.tsx  VerifyUserScreen.tsx  login.tsx  registration.tsx  walletscreen.tsx
src/scribble/: ClearButton.tsx  DashGapSlider.tsx  DrawingCanvas.tsx  MemberList.tsx  StrokeWidthSlider.tsx  UndoButton.tsx  index.tsx
src/socket/: socket.ts  websocket_provider.tsx
src/state/: UserAndGameState.ts  userGameState.ts
src/types/: game_event_model.ts  models.ts  ws_and_game_events.ts
src/utils/: mqtt_event_names.ts  solana_const.ts
(+80 files in other folders)
